[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv-compatible customer support environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.135.3",
  "uvicorn[standard]==0.43.0",
  "pydantic==2.12.5",
  "httpx==0.28.1",
  "openai==2.30.0",
  "python-dotenv==1.2.2",
]

[project.scripts]
server = "server.app:main"
openenv-inference = "inference:main"
